# talk-crash-forecasting-naive-to-foundational

./: .gitignore  README.md  index.html  index.md  index.qmd  index.quarto_ipynb  main.py  notes.html  notes.md  pyproject.toml  snippets.ipynb
