[project]
name = "talk-crash-forecasting-naive-to-foundational"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "datasetsforecast>=1.0.0",
    "hierarchicalforecast>=1.2.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "mlforecast>=1.0.2",
    "neuralforecast>=0.1.0",
    "nixtla>=0.6.6",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "polars>=1.27.1",
    "python-dotenv>=1.1.0",
    "seaborn>=0.13.2",
    "statsforecast==1.7.6",
    "tsfeatures>=0.4.5",
    "tsfresh>=0.21.0",
]
